Fix header background image size on iOS Safari

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1803,6 +1803,7 @@
 				#header {
 					padding: 5.5em 0 5em 0;
 					background-attachment: scroll;
+					height: 90vh;
 
           header {
 						width: 12em;
@@ -1810,6 +1811,10 @@
   
 					h1 {
 						font-size: 2.5em;
+					}
+
+					&::after {
+						background-attachment: scroll;
 					}
 				}
 
